--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 logo: # add logo name
-title: BB - Mastering Bingo Blitz
+title: BB - Mastering Bingo Blitz - 2
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/bef" # the subpath of your site, e.g. /blog
+baseurl: "/bb-realm" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Banner settings
@@ -15,11 +15,11 @@ banner-desc: # add banner description
 
 # Author settings
 author-pic: face.jpg # your photo
-author-name: # your name
-about-author: # about author
-email: your-email@domain.com # your email
-phone: (496)-169-6557 # your pnone number
-website: https://dwayne.example.com # you website
+author-name: Celente # your name
+about-author: Regular BB Player. # about author
+email: celentebb@gmail.com # your email
+phone: N/A # your pnone number
+website: https://celentebb.github.io/bb-realm # you website
 
 # Social link
 google_url:    # add url link
