Cambios: se agregan datos de contacto.

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ banner-desc: An easy way to excel in Bingo Blitz # add banner description
 # Author settings
 author-pic: credits.png # your photo
 author-name: Celente # your name
-about-author: Regular BB Player. # about author
+about-author: Regular BB Player. Comments, suggestions, corrections, write me an email. # about author
 email: celentebb@gmail.com # your email
 phone: N/A # your pnone number
 website: https://celentebb.github.io/bb-realm # you website
